# sarankirthic.github.io

./: .gitignore  CNAME  README.md  app.py  config.py  forms.py  index.html  ip.js  main.css  main.html  pyproject.toml  requirements.txt  script.js  setup.py  style.css  styles.css
CSS/: style.css
JS/: script.js
about/: about.css  about.html
art/: art.html
css/: main.css  project.css
js/: contact.js  script.js
pages/: about.html  art.html  contact.html  home.html  project.html  secret.html
pages/css/: contact.css
sarankirthic_github_io.egg-info/: PKG-INFO  SOURCES.txt
secret/: secret.html
src/: main.html
static/css/: contact.css  light.css  mobile.css  project.css  styles.css
templates/: about.html  art.html  base.html  contact.html  helloworld.html  home.html  project.html  secret.html
