[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarankirthic_github_io"
version = "0.1.0"
description = "Personal project for sarankirthic.github.io"
authors = [{name = "sarankirthic"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
